--- a/.github/workflows/basic-workflow.yml
+++ b/.github/workflows/basic-workflow.yml
@@ -5,6 +5,6 @@ on: [push]
 
 jobs:
   basic_workflow:
-    runs-on: ubuntu_latest
+    runs-on: ubuntu-latest
     steps:
       - run: echo "Job basic-workflow execution"
